--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.castelcode.cruisecompanion"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,38 +21,45 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-database:15.0.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.2'
+    implementation project(':protobuf')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    compile 'joda-time:joda-time:2.9.4'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'io.gsonfire:gson-fire:1.8.1'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.itextpdf:itextg:5.5.10'
-    compile 'com.basgeekball:awesome-validation:2.0'
-    compile 'com.android.volley:volley:1.0.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.google.protobuf:protobuf-java-util:3.4.0'
+    implementation 'com.google.protobuf:protobuf-java:3.5.1'
+    implementation 'com.github.BlacKCaT27:CurrencyEditText:2.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'joda-time:joda-time:2.9.4'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'io.gsonfire:gson-fire:1.8.1'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.basgeekball:awesome-validation:2.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    testImplementation 'junit:junit:4.12'
     // Optional -- Mockito framework
-    testCompile 'org.mockito:mockito-core:2.4.0'
+    testImplementation 'org.mockito:mockito-core:2.4.0'
     implementation files('libs/libphonenumber-8.8.8.jar')
-    testCompile 'org.powermock:powermock-module-junit4:1.7.0RC2',
+    testImplementation 'org.powermock:powermock-module-junit4:1.7.0RC2',
             'org.powermock:powermock-api-mockito2:1.7.0RC2'
     implementation files('libs/de.tum.in.www1.jReto-1.0-jar-with-dependencies.jar')
-    testCompile "org.robolectric:robolectric:3.8"
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
-    androidTestCompile 'com.android.support:support-annotations:26.1.0'
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    testImplementation "org.robolectric:robolectric:3.8"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
-
 
 apply plugin: 'com.google.gms.google-services'
